# FikoEngine

./: .gdbinit  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  FikoEngine.h  Jenkinsfile  README.md  information.txt  main.cpp
Application/: Application.h
FikoEngine/: Application.cpp  Application.h  EntryPoint.h  FikoEngine.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h
FikoEngine/Logger/: Format.txt  Logger.h
FikoEngine/Logger/lwlog/: color.h  core.h  datetime.h  details.h  formatter.cpp  formatter.h  lwlog.cpp  lwlog.h  registry.cpp  registry.h  utilities.h
FikoEngine/Renderer/: Buffer.cpp  Buffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
FikoEngine/Renderer/Platform/OpenGL/: OpenGLCore.cpp  OpenGLCore.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
FikoEngine/Renderer/Platform/Vulkan/: AllocationManger.cpp  AllocationManger.h  VulkanCore.cpp  VulkanCore.h  VulkanCreateInfos.cpp  VulkanCreateInfos.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanUtilities.h
FikoEngineEditor/src/: AssetsPanel.cpp  AssetsPanel.hpp  Editor.cpp  EditorLayer.cpp  EditorLayer.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h
FikoEngineLib/src/: FikoEngine.h
FikoEngineLib/src/Application/: Application.cpp  Application.h
FikoEngineLib/src/Core/: Buffer.h  Core.h  Definitions.h  Extent2D.h  Log.cpp  Log.h  Ref.cpp  Ref.h  UUID.cpp  UUID.h  pch.hpp  stdcpp.h
FikoEngineLib/src/ImGUI/: ComponentView.cpp  ComponentView.h  ImGUILayer.cpp  ImGUILayer.h
FikoEngineLib/src/Layer/: Layer.h  LayerStack.cpp  LayerStack.h
FikoEngineLib/src/Renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  ObjectLoader.cpp  ObjectLoader.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererSpec.h  Shader.cpp  Shader.h  ShaderDataType.h  ShaderUniform.h  Texture.cpp  Texture.h  Vertex.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h  Viewport.h  Window.cpp  Window.h
FikoEngineLib/src/Renderer/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
FikoEngineLib/src/Renderer/Vulkan/: Buffer.cpp  Buffer.h  Command.cpp  Command.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  (+32 more)
FikoEngineLib/src/Scene/: Component.cpp  Component.h  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.hpp
FikoEngineLib/src/Util/: File.cpp  File.h  Version.h
Sandbox/src/: Sandbox.cpp  SandboxLayer.cpp  SandboxLayer.h  sandbox.cpp
Util/: Version.h
assets/: Default3D.frag.glsl  Default3D.opengl.vert.glsl  FlatShader.opengl.frag.glsl  FlatShader.vert.glsl  LightShader.frag.glsl  LightShader.opengl.vert.glsl  flat2D.frag  flat2D.vert  flat3D.vert  flat3D.vert.spv  greenScene.yaml  imgui.ini  lol.yaml  purpleScene2.yaml  sampler3D.frag  sampler3D.vert  testScene.yaml  testSceneLol.yaml
assets/Shaders/: BlingPhongDiffuseTextured.frag.glsl  BlingPhongDiffuseTextured.vert.glsl  BlingPhongFlat.frag.glsl  BlingPhongFlat.vert.glsl  BlingPhongTextured.frag.glsl  BlingPhongTextured.vert - Copy.glsl  BlingPhongTextured.vert.glsl  Default3D.frag.glsl  Light.frag.glsl
assets/models/Source/: HazelText.fbx  PhysicsTestMesh.fbx  SubmeshCubeTest.fbx  TestScene.fbx
assets/textures/: imgui.ini
scripts/: Setup.py  SetupPython.py  SetupVcpkg.py  SetupVulkan.py  Utils.py
src/: FikoEngine.h  main.cpp
src/Application/: Application.cpp  Application.h  ApplicationSpec.h
src/Core/: Buffer.h  Core.h  Definitions.h  Extent2D.h  Log.cpp  Log.h  Math.h  Ref.cpp  Ref.h  Timestep.cpp  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h  stdcpp.h
src/Editor/: AssetsPanel.cpp  AssetsPanel.h  AssetsPanel.hpp  EditorLayer.cpp  EditorLayer.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h
src/ImGUI/: ComponentView.cpp  ComponentView.h  ImGUILayer.cpp  ImGUILayer.h
src/Layer/: Layer.h  LayerStack.cpp  LayerStack.h
src/Renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Memory.cpp  Memory.h  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  ObjectLoader.cpp  ObjectLoader.h  Platform.cpp  Platform.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererSpec.h  Shader.cpp  Shader.h  ShaderDataType.h  ShaderUniform.h  Texture.cpp  Texture.h  TextureAtlas.h  Uniform.cpp  Uniform.h  UniformDataType.h  UniformLayout.cpp  UniformLayout.h  Vertex.cpp  Vertex.h  (+11 more)
src/Renderer/OpenGL/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
src/Renderer/Vulkan/: Buffer.cpp  Buffer.h  Command.cpp  Command.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  IndexBuffer.cpp  IndexBuffer.h  Instance.cpp  Instance.h  Material.cpp  Material.h  Memory.cpp  Memory.h  OpenGLContext.cpp  OpenGLContext.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.cpp  Queue.h  RendererData.h  Renderpass.cpp  Renderpass.h  Swapchain.cpp  Swapchain.h  SwapchainSpec.h  Synchronization.cpp  Synchronization.h  Texture.cpp  Texture.h  (+13 more)
src/Scene/: Component.cpp  Component.h  Entity.h  Scene.cpp  Scene.h
src/Util/: File.cpp  File.h  Version.h
(+26 files in other folders)
