cmake_minimum_required(VERSION 3.21)
project(FIKO_ENGINE)

add_subdirectory(Vendor/glfw)
#add_subdirectory(Vendor/VulkanMemoryAllocator)

add_subdirectory(Vendor/glm)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_GENERATOR_PLATFORM x64)
message("Compiler Version: ${CMAKE_CXX_COMPILER_VERSION}")

add_compile_definitions(GLFW_EXPOSE_NATIVE_WIN32)

file(GLOB_RECURSE IMGUI_SOURCE_FILES imgui_impl_vulkan.cpp imgui_impl_glfw.cpp imgui.cpp imgui_draw.cpp imgui_tables.cpp imgui_widgets.cpp )
file(GLOB_RECURSE IMGUI_HEADER_FILES imgui_impl_vulkan.h   imgui_impl_glfw.h   imgui.h imconfig.h imgui_internal.h imstb_rectpack.h imstb_textedit.h imstb_truetype.h)

file(GLOB_RECURSE SOURCE_FILES ./src/*.cpp)
file(GLOB_RECURSE HEADER_FILES ./src/*.h)

set (EXCLUDE_DIR "/Vendor/")
foreach (TMP_PATH ${SOURCE_FILES})
    string (FIND ${TMP_PATH} ${EXCLUDE_DIR} EXCLUDE_DIR_FOUND)
    if (NOT ${EXCLUDE_DIR_FOUND} EQUAL -1)
        list (REMOVE_ITEM SOURCE_FILES ${TMP_PATH})
    endif ()
endforeach(TMP_PATH)
foreach (TMP_PATH ${HEADER_FILES})
    string (FIND ${TMP_PATH} ${EXCLUDE_DIR} EXCLUDE_DIR_FOUND)
    if (NOT ${EXCLUDE_DIR_FOUND} EQUAL -1)
        list (REMOVE_ITEM HEADER_FILES ${TMP_PATH})
    endif ()
endforeach(TMP_PATH)

add_executable(FIKO_ENGINE ${SOURCE_FILES} ${HEADER_FILES} ${IMGUI_SOURCE_FILES} ${IMGUI_HEADER_FILES})
target_compile_options(FIKO_ENGINE PRIVATE -static-libstdc++)
target_compile_options(FIKO_ENGINE PRIVATE -Wno-volatile)
target_compile_options(FIKO_ENGINE PRIVATE -Wno-delete-incomplete)
target_compile_options(FIKO_ENGINE PRIVATE -Wno-int-to-pointer-cast)
#if(USE_LWLOG)
    include_directories(FIKO_ENGINE Vendor/lwlog/lwlog/src)
#endif()

include_directories(FIKO_ENGINE Vendor/imgui)
include_directories(FIKO_ENGINE Vendor/imgui/backends)
include_directories(FIKO_ENGINE Vendor/entt/single_include)
include_directories(FIKO_ENGINE ./src)
include_directories(FIKO_ENGINE Vendor/glfw/include)
include_directories(FIKO_ENGINE C:/VulkanSDK/1.3.211.0/Include)
#include_directories(FIKO_ENGINE Vendor/VulkanMemoryAllocator/src)
include_directories(FIKO_ENGINE Vendor/glm)

target_link_libraries(FIKO_ENGINE glm)
target_link_libraries(FIKO_ENGINE C:/VulkanSDK/1.3.211.0/Lib/vulkan-1.lib)
#target_link_libraries(FIKO_ENGINE VulkanMemoryAllocator)
target_link_libraries(FIKO_ENGINE glfw)
